@@ -4,7 +4,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections.CollectionUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -28,6 +27,7 @@ import uk.gov.hmcts.reform.prl.mapper.CcdObjectMapper;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.caseaccess.OrganisationPolicy;
 import uk.gov.hmcts.reform.prl.models.caseflags.Flags;
+import uk.gov.hmcts.reform.prl.models.complextypes.CaseManagementLocation;
 import uk.gov.hmcts.reform.prl.models.complextypes.QuarantineLegalDoc;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.services.caseflags.PartyLevelCaseFlagsService;
@@ -44,6 +44,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import static org.apache.commons.lang3.StringUtils.isBlank;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURTNAV;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LONDON_TIME_ZONE;
 import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
@@ -53,7 +54,7 @@ import static uk.gov.hmcts.reform.prl.services.managedocuments.ManageDocumentsSe
 
 @Slf4j
 @Service
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+@RequiredArgsConstructor
 public class CourtNavCaseService {
 
     protected static final String[] ALLOWED_FILE_TYPES = {"pdf", "jpeg", "jpg", "doc", "docx", "bmp", "png", "tiff", "txt", "tif"};
@@ -133,7 +134,7 @@ public class CourtNavCaseService {
             QuarantineLegalDoc courtNavQuarantineLegalDoc = getCourtNavQuarantineDocument(
                 document.getOriginalFilename(),
                 tempCaseData,
-                uploadResponse.getDocuments().get(0),
+                uploadResponse.getDocuments().getFirst(),
                 typeOfDocument
             );
 
@@ -277,9 +278,8 @@ public class CourtNavCaseService {
             caseData
         );
 
-        /** Tech debt: need to pick this extra transaction as a tech debt.
-         *  In the previous one, case data conversion is removing multiple must to have fields.
-         **/
+        // Tech debt: need to pick this extra transaction as a tech debt.
+        // In the previous one, case data conversion is removing multiple must to have fields.
         updateCommonSetUpForNoCAndCaseFlags(caseId);
         log.info("**********************Tab refresh, CC setup and CourtNav case creation complete**************************");
     }
@@ -305,6 +305,22 @@ public class CourtNavCaseService {
             caseDataMap
         );
         log.info("Common component setup for NoC and case flags is completed");
+    }
+
+    public void validateCaseManagementLocation(CaseData caseData) {
+        CaseManagementLocation location = caseData.getCaseManagementLocation();
+
+        if (location == null
+            || isBlank(location.getRegion())
+            || isBlank(location.getBaseLocation())
+            || isBlank(location.getRegionName())
+            || isBlank(location.getBaseLocationName())) {
+
+            log.warn("Case management location is invalid: one or more required fields are missing or blank.");
+
+            //  applicant postcode or court name fields are missing or blank
+            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, "Case management location is invalid.");
+        }
     }
 }
 
